Fix playlist form spacing

--- a/app/assets/stylesheets/components/_library_menu.scss
+++ b/app/assets/stylesheets/components/_library_menu.scss
@@ -5,6 +5,7 @@
     color: lightgray;
     font-size: 13px;
     height: 100%;
+    overflow-y: scroll;
 }
 
 #library-menu h1 {
