--- a/app/assets/stylesheets/components/_playlist_menu.scss
+++ b/app/assets/stylesheets/components/_playlist_menu.scss
@@ -1,10 +1,10 @@
 #settings-menu {
     background-color: #282A2D;
     position: absolute;
-    left: 80px;
+    left: 40px;
     top: 12px;
     border-radius: 2px; 
-    width: 170px;
+    width: 150px;
     border: 1px solid rgba(255,255,255,.25);
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     z-index: 100;
